Grace/tests/gibbs/errors/t053.grace
// ERROR = P1001
import "StandardPrelude" as
